[project]
name = "mupundu-scripts"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "polars>=1.26.0",
    "rich>=13.9.4",
    "typer>=0.15.2",
]
license = { file = "LICENSE.md" }


[project.scripts]
create-lineage-csv = "create_lineage_csv:cli_entrypoint"